--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,6 +4,10 @@
   <strong>Name:</strong>
   <%= @project.name %>
 </p>
+<p>
+  <strong>User:</strong>
+  <%= @project.user %>
+</p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
