--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,16 @@
   <strong>Name:</strong>
   <%= @user.name %>
 </p>
+<p>
+  <strong>Projects:</strong>
+  <% @user.projects.each do |project| %>
+    <tr>
+      <td><%= project.name %></td>
+      <td><%= link_to 'Show', project %></td>
+    </tr>
+  <% end %>
+</p>
+<p><%= link_to 'New Project', new_project_path %></p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
