--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -15,7 +15,9 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-
+  <div class="field">
+    <%= f.collection_select :user_id, User.order(:name),:id,:name %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
