--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,11 @@
 <head>
   <title>Portfolio</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <!-- Bootstrap file -->
+  <%= stylesheet_link_tag 'bootstrap.min.css' %>
+
+  <!-- Including jQuery file -->
+  <%= javascript_include_tag "jquery-1.12.1.min.js" %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
