--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
-
       <ul>
       <% @project.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -16,7 +15,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.collection_select :user_id, User.order(:name),:id,:name %>
+    <%= f.label :user_id %><br>
+    <%= f.collection_select :user_id, User.order(:name), :id, :name %>
   </div>
   <div class="actions">
     <%= f.submit %>
