--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 <p>
   <strong>User:</strong>
-  <%= @project.user %>
+  <%= @project.user.name if @project.user %>
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
