--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,7 +7,8 @@
 <p>
   <strong>User:</strong>
   <%= @project.user.name if @project.user %>
+  <%= link_to 'Show', user_path(@project.user), class: "btn btn-default" %>
 </p>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Edit', edit_project_path(@project), class: "btn btn-default" %> |
+<%= link_to 'Back', projects_path, class: "btn btn-default" %>
