--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username %>
+  </div>
+  <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
@@ -22,6 +26,10 @@
   <div class="field">
     <%= f.label :position %><br>
     <%= f.text_field :position %>
+  </div>
+  <div class="field">
+    <%= f.label :github %> (username)<br>
+    <%= f.text_field :github %>
   </div>
   <div class="actions">
     <%= f.submit %>
