--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,26 +1,30 @@
 <h1>Listing projects</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
+<div class="container">
+  <table>
+    <thead>
       <tr>
-        <td><%= project.name %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>User</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @projects.each do |project| %>
+        <tr>
+          <td><%= project.name %></td>
+          <td><%= project.user.name if project.user %></td>
+          <td><%= link_to 'Show', project, class: "btn btn-default" %></td>
+          <td><%= link_to 'Edit', edit_project_path(project), class: "btn btn-default" %></td>
+          <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
-<%= link_to 'Back to Users', users_path %>
+<%= link_to 'New Project', new_project_path, class: "btn btn-success" %>
+<%= link_to 'Back to Users', users_path, class: "btn btn-default" %>
