--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New user</h1>
 
-<%= render 'form' %>
+<%= render 'form', class: "btn btn-default" %>
 
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path, class: "btn btn-default" %>
