Adds basic style to admin pages

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Listing users</h1>
-
+<hr />
 <div class="container">
-  <table>
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
         <th>Name</th>
-        <th>Projects Amount</th>
+        <th>Projects</th>
         <th>Github</th>
         <th colspan="3"></th>
       </tr>
@@ -32,5 +32,7 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path, class: "btn btn-success" %>
-<%= link_to 'Show Projects', projects_path, class: "btn btn-default" %>
+<div class="bottom-button">
+  <%= link_to 'New User', new_user_path, class: "btn btn-success" %>
+  <%= link_to 'Show Projects', projects_path, class: "btn btn-default" %>
+</div>
