--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,12 +1,15 @@
-<h1>Admin#index</h1>
+<h1>Admin panel</h1>
+<hr />
 
 <div class="container">
   <h3>Users</h3>
+  <%= link_to 'Info', users_path, class: "btn btn-info" %>
   <% @users.map do |u| %>
     <p><%= u.name  %></p>
   <% end %>
 
   <h3>Projects</h3>
+  <%= link_to 'Info', projects_path, class: "btn btn-info" %>
   <% @projects.map do |p| %>
     <p><%= p.name  %></p>
   <% end %>
