--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing projects</h1>
-
+<hr />
 <div class="container">
-  <table>
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
         <th>Name</th>
@@ -26,5 +26,7 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path, class: "btn btn-success" %>
-<%= link_to 'Back to Users', users_path, class: "btn btn-default" %>
+<div class="bottom-button">
+  <%= link_to 'New Project', new_project_path, class: "btn btn-success" %>
+  <%= link_to 'Back to Users', users_path, class: "btn btn-default" %>
+</div>
